aesthisia-demo/kubernetes/aesthisia-react-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aesthisia-react
  labels:
    name: aesthisia-react
