aesthisia-demo/kubernetes/aesthisia-react-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aesthisia-react-dep
spec:
  selector:
    matchLabels:
      app: aesthisia
  replicas: 1
  template:
    metadata:
      labels: 
        app: aesthisia
    spec:
      containers:
        name: aesthisia-react-app
        image: abhaybajeta/aesthisia-react:1.2.0
        ports: 
        - containerPort: 3000
