aesthisia-demo/kubernetes/aesthisia-react-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: aesthisa-react-svc
  namespace: aesthisia
spec:
  type: LoadBalancer
  selector:
    app: aesthisia
  ports:
    - name: my-app
      port: 80
      targetPort: 3000
