aesthisia-demo/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aesthisia-ingress
  namespace: aesthisia
  annotations:
    kubernetes.io/rewrite-target: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - react.aesthisia.in
    secretName: aesthisia-ingress-tls
  rules:
  - host: react.aesthisia.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aesthisa-svc
            port:
              number: 80
